UI and Functionality Improvements
- Fixed chess board right alignment within board-main-container
- Added smooth color transitions to clock displays
- Fixed digital font for clock displays and made them responsive
- Added CSS transitions for smoother visual updates
- Fixed bug with null statusDiv in WebSocket onclose handler
- Fixed channel tabs not showing messages due to regex issues
- Replaced setTimeout/setInterval with requestAnimationFrame for CSP compliance
- Removed extraneous comments throughout the codebase
- Fixed issue where closing a tab didn't make another tab active
- Set vertical divider to 75% chess board, 25% console area by default
- Auto-scroll main console to bottom when a tab is opened for the first time
- Added cache-busting for index.js and index.css
- Added unique colors for specific channels, shouts, and direct tells
- Fixed overlap between chess board area and horizontal divider

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
-    <link href="index.css" rel="stylesheet">
+    <!-- Load index.css with cache-busting query parameter -->
+    <link href="index.css?v=1" rel="stylesheet">
 </head>
 <body>
 <!-- Hamburger Menu -->
@@ -251,11 +252,7 @@
     </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.2/chess.min.js"></script>
-<script>
-    // Add timestamp to prevent caching of index.js
-    const scriptElement = document.createElement('script');
-    scriptElement.src = 'index.js?v=' + new Date().getTime();
-    document.body.appendChild(scriptElement);
-</script>
+<!-- Load index.js with cache-busting query parameter -->
+<script src="index.js?v=1"></script>
 </body>
 </html>
