- Fixed board orientation issues. - Refactord the way boards were constructed to reduce confusion.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <title>Simple FICS Interface</title>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
+    <!-- Fonts are now embedded in CSS -->
     <!-- Load CSS files with cache-busting query parameters -->
     <link href="index.css?v=1" rel="stylesheet">
     <link href="chess.css?v=1" rel="stylesheet">
@@ -279,8 +276,7 @@
 
                     <div style="display: flex; align-items: center; margin-bottom: 8px;">
                         <input type="checkbox" id="prefGameTellsToTabs" style="width: auto; margin-right: 10px;">
-                        <label for="prefGameTellsToTabs" style="font-weight: normal;">Send all game tells to game
-                            tab</label>
+                        <label for="prefGameTellsToTabs" style="font-weight: normal;">Send all game tells to game tab</label>
                     </div>
                 </div>
             </div>
