--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <title>Simple FICS Interface</title>
-    <!-- Fonts are now embedded in CSS -->
-    <!-- Load CSS files with cache-busting query parameters -->
-    <link href="index.css?v=1" rel="stylesheet">
-    <link href="chess.css?v=1" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="index.css?v=1" rel="stylesheet"> <!--load with cache busting versions. Increment the number in each release. -->
+    <link href="chess.css?v=1" rel="stylesheet"> <!--load with cache busting versions. Increment the number in each release. -->
 </head>
 <body>
 <!-- Hamburger Menu -->
@@ -313,8 +312,8 @@
     </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.2/chess.min.js"></script>
-<script src="chess.js?v=1" type="module"></script>
-<script src="index.js?v=1" type="module"></script>
+<script src="chess.js?v=1" type="module"></script> <!--load with cache busting versions. Increment the number in each release. -->
+<script src="index.js?v=1" type="module"></script> <!--load with cache busting versions. Increment the number in each release. -->
 
 </body>
 </html>
