Fixed promotion background color.

--- a/index.html
+++ b/index.html
@@ -156,6 +156,14 @@
                     <span>Automatically login when connecting to FICS</span>
                 </div>
             </div>
+
+            <div class="preference-group">
+                <label for="prefStayLoggedIn">Stay Logged In:</label>
+                <div style="display: flex; align-items: center;">
+                    <input type="checkbox" id="prefStayLoggedIn" style="width: auto; margin-right: 5px;">
+                    <span>Send periodic commands to keep connection alive</span>
+                </div>
+            </div>
         </div>
 
         <!-- Chess Board Preferences -->
