Fixed stockfish import.

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ window.stockfishReady = false;
 </script>
 <script type="module">
 // Load the sf16-7 Stockfish engine
-import Sf167Web from '../scripts/sf16-7.js';
+import Sf167Web from './sf16-7.js';
 
 // Initialize and expose Stockfish globally
 window.Stockfish = Sf167Web;
